# extensible-effects-th

./: .gitignore  ChangeLog.md  LICENSE  README.md  extensible-effects-th.cabal  package.yaml
examples/: Simple.hs
src/Control/Eff/Operational/: TH.hs
